--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
+    "moment": "^2.29.1",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-big-calendar": "^0.33.5",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4"
   }
 }
